--- a/pandas.ipynb
+++ b/pandas.ipynb
@@ -795,10 +795,32 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "original_sports = pd.Series({'Archery': 'Bhutan',\n",
+    "                             'Golf': 'Scotland',\n",
+    "                             'Sumo': 'Japan',\n",
+    "                             'Taekwondo': 'South Korea'})\n",
+    "cricket_loving_countries = pd.Series(['Australia',\n",
+    "                                      'Barbados',\n",
+    "                                      'Pakistan',\n",
+    "                                      'England'], \n",
+    "                                   index=['Cricket',\n",
+    "                                          'Cricket',\n",
+    "                                          'Cricket',\n",
+    "                                          'Cricket'])"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "all_countries = original_sports.append()"
+   ]
   }
  ],
  "metadata": {
