convert series to dataframes

--- a/pandas.ipynb
+++ b/pandas.ipynb
@@ -815,12 +815,89 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "all_countries = original_sports.append()"
+    "all_countries = original_sports.append(cricket_loving_countries)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Archery           Bhutan\n",
+       "Golf            Scotland\n",
+       "Sumo               Japan\n",
+       "Taekwondo    South Korea\n",
+       "Cricket        Australia\n",
+       "Cricket         Barbados\n",
+       "Cricket         Pakistan\n",
+       "Cricket          England\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "all_countries"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Cricket    Australia\n",
+       "Cricket     Barbados\n",
+       "Cricket     Pakistan\n",
+       "Cricket      England\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "all_countries.loc['Cricket']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### DataFrame"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "purchase_1 = pd.Series({'Name': 'Chris',\n",
+    "                        'Item Purchased': 'Dog Food',\n",
+    "                        'Cost': 22.50})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
