change headers and indices of data accordingly

--- a/pandas.ipynb
+++ b/pandas.ipynb
@@ -1916,10 +1916,190 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_csv('olympics.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "      <th>2</th>\n",
+       "      <th>3</th>\n",
+       "      <th>4</th>\n",
+       "      <th>5</th>\n",
+       "      <th>6</th>\n",
+       "      <th>7</th>\n",
+       "      <th>8</th>\n",
+       "      <th>9</th>\n",
+       "      <th>10</th>\n",
+       "      <th>11</th>\n",
+       "      <th>12</th>\n",
+       "      <th>13</th>\n",
+       "      <th>14</th>\n",
+       "      <th>15</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>№ Summer</td>\n",
+       "      <td>01 !</td>\n",
+       "      <td>02 !</td>\n",
+       "      <td>03 !</td>\n",
+       "      <td>Total</td>\n",
+       "      <td>№ Winter</td>\n",
+       "      <td>01 !</td>\n",
+       "      <td>02 !</td>\n",
+       "      <td>03 !</td>\n",
+       "      <td>Total</td>\n",
+       "      <td>№ Games</td>\n",
+       "      <td>01 !</td>\n",
+       "      <td>02 !</td>\n",
+       "      <td>03 !</td>\n",
+       "      <td>Combined total</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Afghanistan (AFG)</td>\n",
+       "      <td>13</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>13</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Algeria (ALG)</td>\n",
+       "      <td>12</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2</td>\n",
+       "      <td>8</td>\n",
+       "      <td>15</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>15</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2</td>\n",
+       "      <td>8</td>\n",
+       "      <td>15</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Argentina (ARG)</td>\n",
+       "      <td>23</td>\n",
+       "      <td>18</td>\n",
+       "      <td>24</td>\n",
+       "      <td>28</td>\n",
+       "      <td>70</td>\n",
+       "      <td>18</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>41</td>\n",
+       "      <td>18</td>\n",
+       "      <td>24</td>\n",
+       "      <td>28</td>\n",
+       "      <td>70</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Armenia (ARM)</td>\n",
+       "      <td>5</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>9</td>\n",
+       "      <td>12</td>\n",
+       "      <td>6</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>11</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>9</td>\n",
+       "      <td>12</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                   0         1     2     3     4      5         6     7     8  \\\n",
+       "0                NaN  № Summer  01 !  02 !  03 !  Total  № Winter  01 !  02 !   \n",
+       "1  Afghanistan (AFG)        13     0     0     2      2         0     0     0   \n",
+       "2      Algeria (ALG)        12     5     2     8     15         3     0     0   \n",
+       "3    Argentina (ARG)        23    18    24    28     70        18     0     0   \n",
+       "4      Armenia (ARM)         5     1     2     9     12         6     0     0   \n",
+       "\n",
+       "      9     10       11    12    13    14              15  \n",
+       "0  03 !  Total  № Games  01 !  02 !  03 !  Combined total  \n",
+       "1     0      0       13     0     0     2               2  \n",
+       "2     0      0       15     5     2     8              15  \n",
+       "3     0      0       41    18    24    28              70  \n",
+       "4     0      0       11     1     2     9              12  "
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df = pd.read_csv('olympics.csv')"
+   ]
   }
  ],
  "metadata": {
