--- a/pandas.ipynb
+++ b/pandas.ipynb
@@ -2094,11 +2094,222 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>№ Summer</th>\n",
+       "      <th>01 !</th>\n",
+       "      <th>02 !</th>\n",
+       "      <th>03 !</th>\n",
+       "      <th>Total</th>\n",
+       "      <th>№ Winter</th>\n",
+       "      <th>01 !.1</th>\n",
+       "      <th>02 !.1</th>\n",
+       "      <th>03 !.1</th>\n",
+       "      <th>Total.1</th>\n",
+       "      <th>№ Games</th>\n",
+       "      <th>01 !.2</th>\n",
+       "      <th>02 !.2</th>\n",
+       "      <th>03 !.2</th>\n",
+       "      <th>Combined total</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Afghanistan (AFG)</th>\n",
+       "      <td>13</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>13</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Algeria (ALG)</th>\n",
+       "      <td>12</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2</td>\n",
+       "      <td>8</td>\n",
+       "      <td>15</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>15</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2</td>\n",
+       "      <td>8</td>\n",
+       "      <td>15</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Argentina (ARG)</th>\n",
+       "      <td>23</td>\n",
+       "      <td>18</td>\n",
+       "      <td>24</td>\n",
+       "      <td>28</td>\n",
+       "      <td>70</td>\n",
+       "      <td>18</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>41</td>\n",
+       "      <td>18</td>\n",
+       "      <td>24</td>\n",
+       "      <td>28</td>\n",
+       "      <td>70</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Armenia (ARM)</th>\n",
+       "      <td>5</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>9</td>\n",
+       "      <td>12</td>\n",
+       "      <td>6</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>11</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>9</td>\n",
+       "      <td>12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Australasia (ANZ) [ANZ]</th>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>4</td>\n",
+       "      <td>5</td>\n",
+       "      <td>12</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>4</td>\n",
+       "      <td>5</td>\n",
+       "      <td>12</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                         № Summer  01 !  02 !  03 !  Total  № Winter  01 !.1  \\\n",
+       "Afghanistan (AFG)              13     0     0     2      2         0       0   \n",
+       "Algeria (ALG)                  12     5     2     8     15         3       0   \n",
+       "Argentina (ARG)                23    18    24    28     70        18       0   \n",
+       "Armenia (ARM)                   5     1     2     9     12         6       0   \n",
+       "Australasia (ANZ) [ANZ]         2     3     4     5     12         0       0   \n",
+       "\n",
+       "                         02 !.1  03 !.1  Total.1  № Games  01 !.2  02 !.2  \\\n",
+       "Afghanistan (AFG)             0       0        0       13       0       0   \n",
+       "Algeria (ALG)                 0       0        0       15       5       2   \n",
+       "Argentina (ARG)               0       0        0       41      18      24   \n",
+       "Armenia (ARM)                 0       0        0       11       1       2   \n",
+       "Australasia (ANZ) [ANZ]       0       0        0        2       3       4   \n",
+       "\n",
+       "                         03 !.2  Combined total  \n",
+       "Afghanistan (AFG)             2               2  \n",
+       "Algeria (ALG)                 8              15  \n",
+       "Argentina (ARG)              28              70  \n",
+       "Armenia (ARM)                 9              12  \n",
+       "Australasia (ANZ) [ANZ]       5              12  "
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "df = pd.read_csv('olympics.csv')"
+    "df = pd.read_csv('olympics.csv', index_col=0, skiprows=1)\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['№ Summer', '01 !', '02 !', '03 !', 'Total', '№ Winter', '01 !.1',\n",
+       "       '02 !.1', '03 !.1', 'Total.1', '№ Games', '01 !.2', '02 !.2', '03 !.2',\n",
+       "       'Combined total'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "01 !\n",
+      "01 !.1\n",
+      "01 !.2\n"
+     ]
+    }
+   ],
+   "source": [
+    "for col in df.columns:\n",
+    "    if col[:2]=='01':\n",
+    "        df.rename(columns={col:'Gold' + col[4:]}, inplace=True)\n",
+    "    if col[:2]=='02':\n",
+    "        df.rename(columns={col:'Silver' + col[4:]}, inplace=True)\n",
+    "    if col[:2]=='03':\n",
+    "        df.rename(columns={col:'Bronze' + col[4:]}, inplace=True)\n",
+    "        "
    ]
   }
  ],
